--- a/src/components/ImageItem/ImageItem.module.scss
+++ b/src/components/ImageItem/ImageItem.module.scss
@@ -4,9 +4,10 @@
   justify-content: center;
   border-radius: 0.75rem;
   background-color: white;
+  max-width: 300px;
 
   &:hover {
-    box-shadow: 0px 5px 28px -1px rgba(22, 189, 145, 0.4);
+    box-shadow: 0px 5px 28px -1px rgb(126, 176, 245);
   }
 }
 
