--- a/src/components/ImageList/ImageList.module.scss
+++ b/src/components/ImageList/ImageList.module.scss
@@ -1,8 +1,8 @@
 .imageListContainer {
-  display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
+  display: flex;
   justify-content: center;
-  padding: 0 2vw 2rem;
+  flex-wrap: wrap;
+  padding: 50px 2vw 0;
   gap: 0.75rem;
   background-color: #eeeeee;
 }
