--- a/src/components/Toolbar/ToolBar.module.scss
+++ b/src/components/Toolbar/ToolBar.module.scss
@@ -1,12 +1,13 @@
 .toolBarContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .toolButtonsContainer {
-  margin: 20px 0;
   display: flex;
-  gap: 20px;
+  gap: 2vw;
 }
 
 .toolButtonsControlContainer {
@@ -16,13 +17,21 @@
 
 .toolButton {
   color: white;
-  background-color: #02bfbf;
-  padding: 10px 20px;
-  border-radius: 20px
+  padding: 20px 28px;
+  border-radius: 20px;
+  width: 30px
 }
 
 .input {
   width: 64px;
-    height: 36px;
-    margin: 10px;
+  height: 36px;
+  margin: 5px;
+}
+
+.selectedToolButton {
+  animation: mymove 2s infinite;
+  background-color: #70b1f9;
+  @keyframes mymove {
+    50% {box-shadow: 0px 2px 20px 5px rgb(22, 118, 253);}
+  }
 }
