--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ html,body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #eeeeee;
 }
 
 input,
