--- a/src/pages/PaintPage/PaintPage.module.scss
+++ b/src/pages/PaintPage/PaintPage.module.scss
@@ -1,7 +1,14 @@
 .paintContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  min-height: 100%;
+  gap: 30px;
+  padding-top: 50px
+}
+
+@media (max-width: 950px) {
+  .paintContainer {
+    flex-direction: column;
+  }
 }
