--- a/src/pages/SignInUpPage/SignInUpPage.module.scss
+++ b/src/pages/SignInUpPage/SignInUpPage.module.scss
@@ -1,8 +1,11 @@
 .formContainer {
-  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   max-width: 36rem;
-  box-shadow: 0 -1px 48px 0 rgba(2, 185, 185, 0.43);
-  padding: 3.5rem;
+  box-shadow: 0 -1px 48px 0 rgb(126, 176, 245);
+  padding: 5.5rem;
   border-radius: 60px;
 }
 
@@ -23,13 +26,13 @@
 .formInput {
   padding: 0.8rem 1rem;
   border-radius: 20px;
-  box-shadow: 0px 5px 28px -1px rgba(22, 189, 145, 0.4);
+  box-shadow: 0px 5px 28px -1px rgb(126, 176, 245);
   margin-top: 8px;
 
   &:focus {
     animation: mymove 2s infinite;
     @keyframes mymove {
-      50% {box-shadow: 0px 2px 20px -1px rgb(22, 189, 145);}
+      50% {box-shadow: 0px 2px 20px -1px rgb(87, 157, 248);}
     }
   }
 }
@@ -40,7 +43,7 @@
 
   & {
     @keyframes error {
-      50% {box-shadow: 0px 2px 20px -1px rgb(22, 189, 145);}
+      50% {box-shadow: 0px 2px 20px -1px rgb(126, 176, 245);}
     }
   }
 }
@@ -55,13 +58,9 @@
   line-height: 1.25rem;
   font-weight: 500;
   color: #ffffff;
-  background-color: rgb(22, 189, 145);
+  background-color: #1677ff
 }
 
 .formButton p {
   font-size: 1.25rem;
-}
-
-.formButton:hover {
-  background-color: rgb(20, 150, 117);
 }
