add save img, edit proj name, upload img to canvas

--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -13,8 +13,10 @@
 
 .topButtons {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   padding-top: 10px;
+  gap: 2vh;
 }
 
 .toolButton {
