--- a/src/components/ImageItem/ImageItem.module.scss
+++ b/src/components/ImageItem/ImageItem.module.scss
@@ -3,12 +3,15 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 0.75rem;
-  background-color: white;
   max-width: 300px;
 
   &:hover {
     box-shadow: 0px 5px 28px -1px rgb(126, 176, 245);
   }
+}
+
+.imageDark {
+  background: #ffffff;
 }
 
 .imageItemIcon {
