--- a/src/components/ImageList/ImageList.module.scss
+++ b/src/components/ImageList/ImageList.module.scss
@@ -1,8 +1,17 @@
+.main {
+  height: 100%;
+  background-color: #eeeeee;
+}
+
+.mainDark {
+  height: 100%;
+  background-color: #0f1214;
+}
+
 .imageListContainer {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   padding: 50px 2vw 0;
   gap: 0.75rem;
-  background-color: #eeeeee;
 }
