--- a/src/components/Toolbar/ToolBar.module.scss
+++ b/src/components/Toolbar/ToolBar.module.scss
@@ -15,6 +15,12 @@
   align-items: center;
 }
 
+.toolButtonsControlContainerDark {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
 .toolButton {
   color: white;
   padding: 20px 28px;
