--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.light {
+  background-color: white;
+  color: black;
+}
+
+body.dark {
+  background-color: black;
+  color: white;
+}
+
+.root {
+  height: 100%;
+}
+
+.rootDark {
+  height: 100%;
+  background-color: #0f1214;
+  color: white;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
