--- a/src/pages/PaintPage/PaintPage.module.scss
+++ b/src/pages/PaintPage/PaintPage.module.scss
@@ -1,3 +1,13 @@
+.paintMain {
+  height: 100%;
+  background-color: #eeeeee;
+}
+
+.paintMainDark {
+  height: 100%;
+  background-color: #0f1214;
+}
+
 .paintContainer {
   display: flex;
   flex-direction: row;
